Update html file

--- a/src/index.html
+++ b/src/index.html
@@ -23,7 +23,7 @@
   <header>
     <div class="logo">
       <a href="#">
-        <img class="logo" src="" alt="logo">
+        <h1 class="header1">Spicy Foods</h1>
       </a>
     </div>
 
